--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "homepage": "https://github.com/twilio/video-quickstart-js#readme",
   "dependencies": {
     "@salesforce-ux/design-system": "~2.5.0",
+    "axios": "^0.17.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "prismjs": "^1.6.0",
